--- a/package.json
+++ b/package.json
@@ -3,10 +3,7 @@
   "version": "0.0.1",
   "scripts": {
     "start": "vercel dev",
-    "deploy": "vercel",
-    "prepare": "husky",
-    "prettier": "prettier --write .",
-    "lint": "eslint --fix ."
+    "deploy": "vercel"
   },
   "dependencies": {
     "hono": "^4.7.6",
@@ -14,17 +11,6 @@
     "zod": "^3.24.2"
   },
   "devDependencies": {
-    "eslint": ">=7.0.0",
-    "eslint-config-prettier": "^10.1.2",
-    "husky": "^9.1.7",
-    "lint-staged": "^15.5.1",
-    "prettier": "^3.5.3",
     "vercel": "^32.4.1"
-  },
-  "lint-staged": {
-    "**/*.{ts,tsx}": [
-      "eslint --fix",
-      "prettier --write --ignore-unknown"
-    ]
   }
 }
